# llm-checker

./: .gitignore  README.md  base_model_params  model_params  pyproject.toml  train.py  user_input.py
data/: copilot.txt  poe.txt  test.csv  train.csv
site/: index.html  script.js  styles.css
source/: __init__.py  data_loader.py  data_processing.py  model.py  model_train.py
