[tool.poetry]
name = "dnn-mh-classifier"
version = "0.1.0"
description = ""
authors = ["Jakub Gilewicz <w1ndrunn3rr@gmail.com>"]
readme = "README.md"
packages = [{include = "dnn_mh_classifier"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "2.5.1"
pandas = "2.2.3"
numpy = "1.24.3"
scikit-learn = "1.0.2"
openai = "1.58.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
